Labb1 criterias done

--- a/Style.css
+++ b/Style.css
@@ -2,11 +2,18 @@
     background-color: #223843;
     margin: 0;
     min-height: 100vh;
+    position: relative;
 }
 
-h1, h2, h3, h4, p, a, li {
+h1, h2, h3, h4, p, a, li, tr {
     font-family: 'Montserrat', sans-serif;
 }
+
+th, td {
+    margin: 5px;
+    border: none;
+}
+
 
 h1, h2, h3 {
     margin: 0;
@@ -93,7 +100,8 @@ header .active {
 }
 
 footer {
-    padding: 0 20px;
+    position: absolute;
+    bottom: 0;
     display: flex;
     width: 100vw;
     background-color: rgba(255, 255, 255, 0.1);
@@ -123,4 +131,11 @@ h3{
 h4 {
     font-size: 12px;
     padding: 20px;
+}
+
+
+@media only screen and (max-width: 600px) {
+    header {
+        flex-direction: column;
+    }
 }
