--- a/Style.css
+++ b/Style.css
@@ -3,6 +3,7 @@
     margin: 0;
     min-height: 100vh;
     position: relative;
+    transition: background-color 200ms;
 }
 
 h1, h2, h3, h4, p, a, li, tr {
@@ -34,6 +35,7 @@ header {
     background-color: #223843;
     width: 100vw;
     margin: 0;
+    transition: background-color 200ms;
 }
 
 header a:first-of-type {
@@ -58,7 +60,7 @@ header * {
     border-bottom: 2px solid rgba(0, 0, 0, 0);
 }
 
-header *:hover {
+header a:hover {
     background-color: rgba(0, 0, 0, 0.1);
     border-bottom: 2px solid #fff;
 }
