--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@
     transition: background-color 200ms;
 }
 
-h1, h2, h3, h4, p, a, li, tr {
+h1, h2, h3, h4, p, a, li, tr, button {
     font-family: 'Montserrat', sans-serif;
 }
 
