--- a/Style.css
+++ b/Style.css
@@ -112,6 +112,10 @@ header .active {
     margin: 0;
 }
 
+.container p {
+    margin-top: 0;
+}
+
 footer {
     position: absolute;
     bottom: 0;
